Fix round video time z-index

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1200,7 +1200,7 @@ middle-ellipsis-element {
   }
 
   .video-time {
-    padding: 1px 6px 2px 7px;
+    padding: 1px 6px 2px;
     background-color: rgba(0, 0, 0, .23) !important;
   }
 
